Add platform compatibility instructions and update Docker configurations for ARM64 support

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
-version: "3.8"
-
 services:
   backend:
     image: frappe/erpnext:v15.45.4
-    platform: linux/arm64
+    platform: linux/amd64
     deploy:
       restart_policy:
         condition: on-failure
@@ -16,7 +14,7 @@ services:
 
   configurator:
     image: frappe/erpnext:v15.45.4
-    platform: linux/arm64
+    platform: linux/amd64
     deploy:
       restart_policy:
         condition: none
@@ -48,7 +46,7 @@ services:
 
   create-site:
     image: frappe/erpnext:v15.45.4
-    platform: linux/arm64
+    platform: linux/amd64
     deploy:
       restart_policy:
         condition: none
@@ -106,7 +104,7 @@ services:
 
   frontend:
     image: frappe/erpnext:v15.45.4
-    platform: linux/arm64
+    platform: linux/amd64
     depends_on:
       - backend
       - websocket
@@ -127,13 +125,13 @@ services:
     volumes:
       - sites:/home/frappe/frappe-bench/sites
       - logs:/home/frappe/frappe-bench/logs
-      - ./nginx/conf.d:/etc/nginx/conf.d:ro
+      - ./nginx/conf.d:/etc/nginx/conf.d
     ports:
       - "8080:8080"
 
   queue-long:
     image: frappe/erpnext:v15.45.4
-    platform: linux/arm64
+    platform: linux/amd64
     deploy:
       restart_policy:
         condition: on-failure
@@ -148,7 +146,7 @@ services:
 
   queue-short:
     image: frappe/erpnext:v15.45.4
-    platform: linux/arm64
+    platform: linux/amd64
     deploy:
       restart_policy:
         condition: on-failure
@@ -190,7 +188,7 @@ services:
 
   scheduler:
     image: frappe/erpnext:v15.45.4
-    platform: linux/arm64
+    platform: linux/amd64
     deploy:
       restart_policy:
         condition: on-failure
@@ -203,7 +201,7 @@ services:
 
   websocket:
     image: frappe/erpnext:v15.45.4
-    platform: linux/arm64
+    platform: linux/amd64
     deploy:
       restart_policy:
         condition: on-failure
