Update Docker and Nginx configurations for erpnext-fresh.localhost setup

--- a/nginx/conf.d/hosts.conf
+++ b/nginx/conf.d/hosts.conf
@@ -1,6 +1,5 @@
 # This configuration overrides the server_name in frappe.conf
 map $http_host $frappe_site_name {
-    default "erpnext.localhost";
-    "localhost:8080" "erpnext.localhost";
+    default "erpnext-fresh.localhost";
+    "localhost:8080" "erpnext-fresh.localhost";
 }
-
