--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,6 +75,11 @@ services:
           fi
         done;
         echo "sites/common_site_config.json found";
+        if [ -d "sites/erpnext.localhost" ]; then
+          echo "Site erpnext.localhost already exists, removing it...";
+          bench drop-site --force erpnext.localhost;
+        fi;
+        echo "Creating new site with ERPNext...";
         bench new-site --no-mariadb-socket --admin-password=admin --db-root-password=admin --install-app erpnext --set-default erpnext.localhost;
         echo "Enabling API access...";
         bench --site erpnext.localhost set-config host_name "http://localhost:8080";
@@ -115,7 +120,7 @@ services:
       - nginx-entrypoint.sh
     environment:
       BACKEND: backend:8000
-      FRAPPE_SITE_NAME_HEADER: erpnext.localhost
+      FRAPPE_SITE_NAME_HEADER: erpnext-fresh.localhost
       SOCKETIO: websocket:9000
       UPSTREAM_REAL_IP_ADDRESS: 127.0.0.1
       UPSTREAM_REAL_IP_HEADER: X-Forwarded-For
