--- a/nginx/conf.d/frappe.conf
+++ b/nginx/conf.d/frappe.conf
@@ -8,7 +8,7 @@ upstream socketio-server {
 
 server {
 	listen 8080;
-	server_name erpnext.localhost;
+	server_name erpnext-fresh.localhost;
 	root /home/frappe/frappe-bench/sites;
 
 	proxy_buffer_size 128k;
@@ -31,15 +31,15 @@ server {
 
 	location ~ ^/protected/(.*) {
 		internal;
-		try_files /erpnext.localhost/$1 =404;
+		try_files /erpnext-fresh.localhost/$1 =404;
 	}
 
 	location /socket.io {
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection "upgrade";
-		proxy_set_header X-Frappe-Site-Name erpnext.localhost;
-		proxy_set_header Origin $scheme://erpnext.localhost;
+		proxy_set_header X-Frappe-Site-Name erpnext-fresh.localhost;
+		proxy_set_header Origin $scheme://erpnext-fresh.localhost;
 		proxy_set_header Host $host;
 
 		proxy_pass http://socketio-server;
@@ -52,17 +52,17 @@ server {
 
 		location ~ ^/files/.*.(htm|html|svg|xml) {
 			add_header Content-disposition "attachment";
-			try_files /erpnext.localhost/public/$uri @webserver;
+			try_files /erpnext-fresh.localhost/public/$uri @webserver;
 		}
 
-		try_files /erpnext.localhost/public/$uri @webserver;
+		try_files /erpnext-fresh.localhost/public/$uri @webserver;
 	}
 
 	location @webserver {
 		proxy_http_version 1.1;
 		proxy_set_header X-Forwarded-For $remote_addr;
 		proxy_set_header X-Forwarded-Proto $scheme;
-		proxy_set_header X-Frappe-Site-Name erpnext.localhost;
+		proxy_set_header X-Frappe-Site-Name erpnext-fresh.localhost;
 		proxy_set_header Host $host;
 		proxy_set_header X-Use-X-Accel-Redirect True;
 		proxy_read_timeout 120;
